--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 
 <head>
   <meta charset="UTF-8">
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+  <i class="fa-solid fa-palette theme-btn"></i>
   <main class="card">
     <h1 class="card__heading">
       ADVICE <span class="card__index">#117</span>
